--- a/practice/p1.html
+++ b/practice/p1.html
@@ -22,9 +22,9 @@
                     <div class="post_line xr"></div>                    
                 </div>
                 <div class="hh">
-                    <h1>ANG</h1>
-                    <h1>GIMMO</h1>
-                    <h1>DDIRURI</h1>
+                    <h1>ROUND HALL</h1>
+                    <h1>PREMIER LEAGUE</h1>
+                    <h1>FUCK YOU ALL</h1>
                 </div>
             </div>
 
