--- a/main.html
+++ b/main.html
@@ -12,14 +12,17 @@
     <body>
         <nav>
             <img id="fabi" src="img/fabicon.png">
-            <img id="logo" src="img/logo.png">            
-            <!-- <img id="menubutton" onclick="" src="img/menu.png"> -->
-            <div id="menubutton" onclick="clicked_menu()">
+            <img class="a" id="logo" src="img/logo.png">            
+            <!-- <img id="menubutton" onclick="" src="img/menu.png"> -->            
+            <div class="a" id="menubutton" onclick="clicked_menu()">
                 <div class="menuline menuline-1"></div>
                 <div class="menuline menuline-2"></div>
                 <div class="menuline menuline-3"></div>
             </div>
-            <img id="search" onclick="clicked_search()" src="img/searchbutton.png">
+            <img class="a" id="search" onclick="clicked_search()" src="img/searchbutton.png">
+            <div class="booking_button a">
+                <a href="bookingpage/booking_main.html">예약하기</a> 
+            </div>
         </nav>
         <div class="popup">
             <table border="0">
