--- a/bookingpage/booking_main.html
+++ b/bookingpage/booking_main.html
@@ -3,50 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>예약하기</title>
-        <link rel="stylesheet" href="../main.css">
+        <link rel="stylesheet" href="booking_main.css">
         <link rel="shortcut icon" href="img/fabicon.png">
         <script src="../slide.js" type="text/javascript" ></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </head>
     <body>
-        <nav>
-            <img id="fabi" src="../img/fabicon.png">
-            <a href="../main.html">
-                <img class="a"  id="logo" src="../img/logo.png">
-            </a>            
-            <!-- <img id="menubutton" onclick="" src="img/menu.png"> -->            
-            <div class="a" id="menubutton" onclick="clicked_menu()">
-                <div class="menuline menuline-1"></div>
-                <div class="menuline menuline-2"></div>
-                <div class="menuline menuline-3"></div>
-            </div>
-            <img class="a" id="search" onclick="clicked_search()" src="../img/searchbutton.png">
-            <div class="booking_button a">
-                <a href="../bookingpage/booking_main.html">예약하기</a> 
-            </div>
-        </nav>
-        <div class="popup">
-            <table border="0">
-                <tr>
-                    주요시설
-                    <td>학생복지관</td>
-                    <td>학술정보관</td>
-                </tr>
-                <tr>
-                    운동시설
-                    <td>대운동장</td>
-                    <td>풋살장</td>
-                    <td>잔디구장</td>
-                </tr>
-            </table>
-        </div> 
-        <div class="menu">
-            <p>LOGIN</p>
-        </div>
+        
         <div class="blank"></div>
         <div class="container a" onclick="showcontainer()">
             <h1>1공학관</h1>
-            <div class="select_container a" >
+            <div class="select_container" >
                 <div class="imgcont"></div>
                 <div class="imgcont"></div>
                 <div class="imgcont"></div>
