--- a/main.html
+++ b/main.html
@@ -10,8 +10,11 @@
 <div class="topblank"></div>
 <body>
     <nav>
+        <div class="menu">
+              <img class="menu-icon-img a" src="newimg/close.png" onclick="clicked_menu()">
+        </div>
         <div class="leftsection">
-            <div class="menubar a">
+            <div class="menubar a" onclick="clicked_menu(1)">
                 <div class="line"></div>
                 <div class="line"></div>
                 <div class="line"></div>
@@ -20,9 +23,9 @@
             <div class="longline"></div>
             <div><p id="leftp">한양대학교 대관</p></div>
             <div class="longline"></div>
-            <img class="left-icon a" src="newimg/mypage.png">
-            <img class="left-icon a" src="newimg/search.png">
-            <img class="left-icon a" src="newimg/star.png">            
+            <a href="login.html"><img class="left-icon a hoverscale" src="newimg/mypage.png"></a>
+            <img class="left-icon a hoverscale" src="newimg/search.png">
+            <img class="left-icon a hoverscale" src="newimg/star.png">            
             <img src="img/fabicon.png" class="left-icon "> 
             
         </div>
