--- a/login.html
+++ b/login.html
@@ -23,7 +23,9 @@
             </div>
         </div>
         <div class="footer">
-            <button class="button_submit">LOGIN</button>
+            <button class="a button_submit">LOGIN</button>
+            <a class="signup" href="signup.html">Sign Up here</a>
         </div>
+        
     </div>
 </body>
