--- a/main.html
+++ b/main.html
@@ -62,9 +62,9 @@
             </footer>
             <!-- <img src="newimg/hills2.jpg" class="card2"> -->
         </div>
-        <div class="nav-right">
+        <!-- <div class="nav-right">
             <p class="nav-right-p">TODAY's </p>
-        </div>
+        </div> -->
         
     </main>
 </body>
