--- a/signup.html
+++ b/signup.html
@@ -26,9 +26,9 @@
                 </div>
                 <div class="inputbox-stair">
                     <div class="verify v4"></div>
-                    <form>                    
-                        <select name="소속">
-                            <option value="none" style="text-align: right;">  소속  </option>
+                    <form >                    
+                        <select name="소속" id="selectoption" onfocusout="verify_input('input_4')" >
+                            <option value="" style="text-align: right;">  소속  </option>
                             
                             <optgroup label="공학대학">
                                 <option value="e1"> 기계공학과 </option>
