--- a/login.html
+++ b/login.html
@@ -7,6 +7,14 @@
         <script src="main.js" type="text/javascript" ></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
+<script>
+    $(function(){
+        $("#input_1 , #input_2").on("propertychange change keydown paste input", function(){            
+            if($(this).attr("id")=="input_1") $(".v1").css("backgroundColor","#0B2161")
+            else if($(this).attr("id")=="input_2") $(".v2").css("backgroundColor","#0B2161")            
+        });
+    });
+</script>
 <body>
     <div class="maincont">
         <div class="topper">
@@ -23,7 +31,7 @@
             </div>
         </div>
         <div class="footer">
-            <button class="a button_submit">LOGIN</button>
+            <button class="a button_submit" onclick="login()">LOGIN</button>
             <a class="signup" href="signup.html">Sign Up here</a>
         </div>
         
