--- a/main.html
+++ b/main.html
@@ -66,8 +66,8 @@
                         </div>
                     </div>
                 <div class="card-text">
-                    <p id="card-text-p-description">703</p>
-                    <p id="card-text-p-name">대회의실</p>                    
+                    <p id="card-text-p-description">3공학관 304 </p>
+                    <p id="card-text-p-name">첨단강의실</p>                    
                     
                 </div>            
                 
