--- a/faq.html
+++ b/faq.html
@@ -14,7 +14,8 @@
             <img src="img/fabicon.png" class="left-icon "> 
             
             <div class="menu">
-                <div class="menu_1 left_menu_button a">대관소개
+                <div class="menu_1 left_menu_button a">
+                    <a href="useGuide.html">대관소개</a>
                     <div class="menubar"></div>
                 </div>
                 
@@ -37,7 +38,7 @@
             FAQ
             <div class="menubar menubar_1"></div>
         </div>
-        <table class="table table-striped">
+        <table class="table table-striped table_css">
             <thead>
                 <tr>
                     <th>번호</th>
