--- a/main.html
+++ b/main.html
@@ -26,7 +26,8 @@
             <img src="img/fabicon.png" class="left-icon "> 
             
             <div class="menu">
-                <div class="menu_1 left_menu_button a">대관소개
+                <div class="menu_1 left_menu_button a">
+                    <a href="useGuide.html">대관소개</a>
                     <div class="menubar"></div>
                 </div>
                 
