--- a/faq.html
+++ b/faq.html
@@ -19,7 +19,8 @@
                     <div class="menubar"></div>
                 </div>
                 
-                <div class="menu_2 left_menu_button a">주요공간
+                <div class="menu_2 left_menu_button a">
+                    <a href="mainplace.html">주요공간</a>
                     <div class="menubar"></div>
                 </div>
                 
