--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <div class="topblank"></div>
-<body>
+<body>    
     <nav>
         <!-- <div class="menu">
               <img class="menu-icon-img a" src="newimg/close.png" onclick="clicked_menu()">
@@ -31,7 +31,8 @@
                     <div class="menubar"></div>
                 </div>
                 
-                <div class="menu_2 left_menu_button a">주요공간
+                <div class="menu_2 left_menu_button a">
+                    <a href="mainplace.html">주요공간</a>
                     <div class="menubar"></div>
                 </div>
                 
